--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.10.2",
     "jquery": "^3.6.1",
+    "process": "^0.11.10",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "util": "^0.12.5",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
