--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --base-href='#'",
+    "build": "npm cache clean --force && npm install && ng build --base-href='#'",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
